syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse) {}
  rpc Login(LoginRequest) returns (AuthResponse) {}
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc UpdateUser(UpdateUserRequest) returns (User) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GetUserRequest {
  string userId = 1;
}

message UpdateUserRequest {
  string userId = 1;
  string username = 2;
  string email = 3;
}

message DeleteUserRequest {
  string userId = 1;
}

message AuthResponse {
  string token = 1;
  User user = 2;
}

message User {
  string userId = 1;
  string username = 2;
  string email = 3;
}

message DeleteUserResponse {
  bool success = 1;
}
